# Personal-Trainer

./: .env  .env.example  .gitignore  .pr-review.yml  .pre-commit-config.yaml  .prettierignore  .trivyignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  Dockerfile  Makefile  README.md  REPO_MAP.md  TASK_NOTES.md  docker-compose.yml  eslint.config.js  fitness_benchmark_app_handoff.md  package-lock.json  package.json  playwright.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
docs/: agent-onboarding.md  app-blueprint.md  board-execution-order.md  cloudflare-usage-monitoring.md  daily-recommendation-contract.md  data-snapshot-contract.md  design-principles.md  git-crypt-rotation.md  global-vision.md  handoff-guide.md  live-input-boundary.md  mcp-integrations.md  milestone-roadmap.md  performance-os-charter.md  working-conventions.md  zero-cost-fitness-app-iac-brief.md
personal_trainer/: README.md  __init__.py  pyproject.toml
personal_trainer/examples/: snapshot-ready.json  sources-ready.json
personal_trainer/src/personal_trainer/: __init__.py  cli.py  contracts.py  cronometer_adapter.py  garmin_adapter.py  hevy_adapter.py  ingestion.py  live_cli.py  live_smoke.py  live_sources.py  macros.py  nutrition.py  progression.py  recommendation.py  snapshot.py  snapshot_assembler.py  snapshot_cli.py  source_registry.py  speed_predictions.py
personal_trainer/tests/: test_cli.py  test_cronometer_adapter.py  test_garmin_adapter.py  test_hevy_adapter.py  test_ingestion.py  test_integration.py  test_live_cli.py  test_live_smoke.py  test_live_sources.py  test_live_sources_script.py  test_macros.py  test_nutrition.py  test_progression.py  test_recommendation.py  test_script_entrypoints.py  test_snapshot.py  test_snapshot_assembler.py  test_source_registry.py  test_speed_contracts.py  test_speed_predictions.py
scripts/: audit_git_crypt.py  build_site_artifacts.py  daily_snapshot_runner.py  generate_history.py  generate_qr.py  live_sources.py  live_sources_example.sh  (+13 more)
(+103 files in other folders)
